add routing and views for art, blog, projects, resume, and contact. I also added components for each of these views. I also moved the base  components to a base-components folder. I also deleted the NavigationBar component and replaced it with a new NavigationBar component that is in the base-components folder. I also updated the routes.js file to include the new views. I also updated the package.json and package-lock.json files to include the new dependencies for vue-router and vue-axios.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "animejs": "^3.2.2",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
-    "vue": "^3.4.25"
+    "vue": "^3.4.25",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "~5.0.0",
