--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vitejs/plugin-vue": "^5.0.4",
     "animejs": "^3.2.2",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
