--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 services: # Services to run
  app: # App service
-  build:   # Build the app
-  context: .   # Context of the build
+  build: .  # Build the app
   dockerfile: Dockerfile   # Dockerfile to use
   container_name: vue-app  # Name of the container
   ports:
