--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services: # Services to run
   restart: unless-stopped # Keeps it running despite server shuts down
   volumes:
    - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf # Mounts the local nginx folder to the container's nginx folder ./nginx: <---host where your web files are at /etc/nginx <---container never changes
+   - ./portfolio/public:/usr/share/nginx/html
   ports:
    - 81:81 # Plain and simple port mapping
   depends_on:
